# ai_investor

./: .env.example  .gitignore  README.md  pyproject.toml
config/: strategy_growth_sbi_csv.yaml  strategy_sbi_csv.yaml  strategy_sbi_csv_user30.yaml  strategy_v1.yaml
data/sbi_screening/出遅れ株/: 出遅れ株_20260216.csv  出遅れ株_20260218.csv  出遅れ株_20260218_user30.csv  出遅れ株_20260219.csv
data/sbi_screening/成長株/: 成長株_20260218.csv  成長株_20260219.csv
docs/: agent_spec.md  data_sources.md  implementation_plan.md
docs/agent_specs/: README.md  tse-growth-stock-flow-v1.md  tse-prime-laggard-flow-v1.md
reports/: 20251121_report.md  20251124_report.md  20260216_report.md  20260218_report.md
scripts/: sync_codex_skills.sh
skills/tse-growth-stock-flow/: SKILL.md
skills/tse-growth-stock-flow/agents/: openai.yaml
skills/tse-growth-stock-flow/references/: agent_spec_v1.md
skills/tse-growth-stock-flow/scripts/: latest_csv_asof.py
skills/tse-prime-laggard-flow/: SKILL.md
skills/tse-prime-laggard-flow/agents/: openai.yaml
skills/tse-prime-laggard-flow/references/: agent_spec_v1.md
skills/tse-prime-laggard-flow/scripts/: latest_csv_asof.py
src/ai_investor/: __init__.py  config.py  main.py  models.py  pipeline.py
src/ai_investor/collectors/: __init__.py  fundamentals.py  market_data.py  news.py  sbi_csv.py
src/ai_investor/reporting/: markdown_report.py  tables.py
src/ai_investor/research/: __init__.py  top3_deep_dive.py
src/ai_investor/scoring/: exclusion.py  qualitative.py  quantitative.py
